--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,7 @@ actix-ws = "0.3"
 actix-multipart = "0.7"
 actix-cors = "0.7"
 tokio = { version = "1.41", features = ["full"] }
+tokio-stream = "0.1"
 mpd_client = { version = "1.3", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
