--- a/nginx/conf.d/muchas-radio.conf
+++ b/nginx/conf.d/muchas-radio.conf
@@ -6,6 +6,12 @@ upstream backend {
     server backend:8080;
 }
 
+# Map for WebSocket upgrade
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
     listen 80;
     server_name _;
@@ -32,7 +38,7 @@ server {
 
         # WebSocket support
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
 
         # Timeouts for long-running connections
         proxy_connect_timeout 7d;
