--- a/nginx/conf.d/muchas-radio.conf
+++ b/nginx/conf.d/muchas-radio.conf
@@ -27,6 +27,38 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Audio stream endpoint - optimized for live streaming
+    location /api/stream {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Critical for streaming: disable all buffering
+        proxy_buffering off;
+        proxy_request_buffering off;
+        proxy_cache off;
+
+        # Long timeouts for continuous streaming
+        proxy_connect_timeout 7d;
+        proxy_send_timeout 7d;
+        proxy_read_timeout 7d;
+
+        # Disable gzip for audio streams (already compressed)
+        gzip off;
+
+        # Streaming headers
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+        add_header Pragma "no-cache" always;
+        add_header Connection "keep-alive" always;
+        add_header X-Accel-Buffering "no" always;
+
+        # Chunked transfer encoding support
+        chunked_transfer_encoding on;
+    }
+
     # Backend API - proxy to backend container
     location /api {
         proxy_pass http://backend;
