--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,8 @@ error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;
+    worker_connections 2048;  # Increased for more concurrent stream connections
+    use epoll;  # Efficient event model for Linux
 }
 
 http {
@@ -21,14 +22,23 @@ http {
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
+    keepalive_requests 1000;  # Allow more requests per connection
     types_hash_max_size 2048;
 
-    # Gzip compression
+    # Buffer settings optimized for streaming
+    client_body_buffer_size 128k;
+    client_max_body_size 100M;
+    client_header_buffer_size 1k;
+    large_client_header_buffers 4 16k;
+
+    # Gzip compression (excludes audio streams which are already compressed)
+    # Note: gzip is explicitly disabled in /api/stream location block
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript 
                application/javascript application/json application/xml;
+    gzip_disable "msie6";  # Disable for old IE
 
     include /etc/nginx/conf.d/*.conf;
 }
