setup muchasradio.com

--- a/nginx/conf.d/muchas-radio.conf
+++ b/nginx/conf.d/muchas-radio.conf
@@ -14,7 +14,7 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen 80;
-    server_name _;
+    server_name muchasradio.com www.muchasradio.com;
 
     client_max_body_size 100M;
 
