--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,9 +3,13 @@ worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
+# Increase file descriptor limits for high concurrency
+worker_rlimit_nofile 8192;
+
 events {
-    worker_connections 2048;  # Increased for more concurrent stream connections
+    worker_connections 4096;  # Increased for more concurrent stream connections
     use epoll;  # Efficient event model for Linux
+    multi_accept on;  # Accept multiple connections at once
 }
 
 http {
@@ -24,6 +28,14 @@ http {
     keepalive_timeout 65;
     keepalive_requests 1000;  # Allow more requests per connection
     types_hash_max_size 2048;
+    
+    # Rate limiting zones for abuse prevention
+    # Stream connections: 5 requests per second burst 10, per IP
+    limit_req_zone $binary_remote_addr zone=stream_limit:10m rate=5r/s;
+    # API connections: 30 requests per second burst 50, per IP
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=30r/s;
+    # Connection limit per IP (for stream endpoint)
+    limit_conn_zone $binary_remote_addr zone=stream_conn:10m;
 
     # Buffer settings optimized for streaming
     client_body_buffer_size 128k;
